--- a/package.json
+++ b/package.json
@@ -9,12 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "framer-motion": "^10.16.5",
     "lucide-react": "^0.293.0",
     "next": "14.0.3",
+    "next-themes": "^0.2.1",
     "react": "^18",
+    "react-countup": "^6.5.0",
     "react-dom": "^18",
+    "react-icons": "^4.12.0",
+    "swiper": "^11.0.5",
     "tailwind-merge": "^2.0.0",
     "tailwindcss-animate": "^1.0.7"
   },
