--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-icons": "^4.12.0",
     "swiper": "^11.0.5",
     "tailwind-merge": "^2.0.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "tech-stack-icons": "^2.0.3"
   },
   "devDependencies": {
     "@types/node": "^20",
