update: redesign whole landing page + new animation

--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "framer-motion": "^10.16.5",
-    "lottie-react": "^2.4.0",
     "lucide-react": "^0.293.0",
     "next": "14.0.3",
     "next-themes": "^0.2.1",
@@ -28,7 +27,7 @@
     "react-countup": "^6.5.0",
     "react-dom": "^18",
     "react-icons": "^4.12.0",
-    "swiper": "^11.0.5",
+    "react-intersection-observer": "^9.13.1",
     "tailwind-merge": "^2.0.0",
     "tailwindcss-animate": "^1.0.7",
     "tech-stack-icons": "^2.1.0"
